backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  namespace: ad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-cont
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
