backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: ad
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
