frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-svc
  namespace: ad
spec:
  selector:
    app: admission
  ports:
    - port: 3000
      targetPort: 3028
  type: ClusterIP
